feat: add slider

--- a/itRacedData/index.html
+++ b/itRacedData/index.html
@@ -21,13 +21,13 @@
                 </label>
                 <nav class="header__navigation">
                     <ul class="navigation__list">
-                        <li class="list__item"><a href="#" class="navigation__item">Home</a></li>
-                        <li class="list__item"><a href="#" class="navigation__item">Services</a></li>
-                        <li class="list__item"><a href="#" class="navigation__item">FAQ’s</a></li>
-                        <li class="list__item"><a href="#" class="navigation__item">Contact</a></li>
+                        <li class="list__item"><a href="#" class="navigation__item active">Home</a></li>
+                        <li class="list__item"><a href="services.html" class="navigation__item">Services</a></li>
+                        <li class="list__item"><a href="FAQ.html" class="navigation__item">FAQ’s</a></li>
+                        <li class="list__item"><a href="contact.html" class="navigation__item">Contact</a></li>
                     </ul>
                 </nav>
-                <button class="header-button button">Place An Order</button>
+                <a href="order.html" class="header-button button">Place An Order</a>
             </div>
         </div>
     </header>
@@ -241,13 +241,13 @@
                 <img class="logo" src="assets/icon/logo-footer.svg" alt="logo">
                 <nav class="footer__navigation">
                     <ul class="navigation__list">
-                        <li class="list__item"><a href="#" class="list__link">Home</a></li>
-                        <li class="list__item"><a href="#" class="list__link">Services</a></li>
-                        <li class="list__item"><a href="#" class="list__link">FAQ’s</a></li>
-                        <li class="list__item"><a href="#" class="list__link">Contact</a></li>
+                        <li class="list__item"><a href="index.html" class="list__link active">Home</a></li>
+                        <li class="list__item"><a href="services.html" class="list__link">Services</a></li>
+                        <li class="list__item"><a href="FAQ.html" class="list__link">FAQ’s</a></li>
+                        <li class="list__item"><a href="contact.html" class="list__link">Contact</a></li>
                     </ul>
                 </nav>
-                <button class="button">Place An Order</button>
+                <a href="order.html" class="button">Place An Order</a>
             </div>
             <div class="footer-description">
                 <div class="left-block">
