rafactor: formatting code

--- a/itRacedData/contact.html
+++ b/itRacedData/contact.html
@@ -22,8 +22,8 @@
                     <ul class="navigation__list">
                         <li class="list__item"><a href="index.html" class="navigation__item">Home</a></li>
                         <li class="list__item"><a href="services.html" class="navigation__item">Services</a></li>
-                        <li class="list__item"><a href="#" class="navigation__item">FAQ’s</a></li>
-                        <li class="list__item"><a href="#" class="navigation__item active">Contact</a></li>
+                        <li class="list__item"><a href="FAQ.html" class="navigation__item">FAQ’s</a></li>
+                        <li class="list__item"><a href="contact.html" class="navigation__item active">Contact</a></li>
                     </ul>
                 </nav>
                 <a href="order.html" class="header-button button">Place An Order</a>
@@ -93,8 +93,8 @@
                     
                 </div>
                 <div class="text">
-                    <span>PRIVACY POLICY</span>
-                    <span>TERMS AND CONDITIONS</span>
+                    <span>Privacy policy</span>
+                    <span>Terms and conditions</span>
                 </div>
                 <div class="right-block">
                     <p class="powered">powered by web & AD</p>
