--- a/itRacedData/index.html
+++ b/itRacedData/index.html
@@ -263,8 +263,8 @@
                     
                 </div>
                 <div class="text">
-                    <span>PRIVACY POLICY</span>
-                    <span>TERMS AND CONDITIONS</span>
+                    <span>Privacy policy</span>
+                    <span>Terms and conditions</span>
                 </div>
                 <div class="right-block">
                     <p class="powered">powered by web & AD</p>
