--- a/itRacedData/order.html
+++ b/itRacedData/order.html
@@ -42,16 +42,16 @@
                         <div class="second-lines"></div>
                         <p class="title__person">Personal Details</p>
                         <div class="person">
-                            <input type="text" placeholder="first">
-                            <input type="text" placeholder="last">
-                            <input type="text" placeholder="company">
-                            <input type="tel" placeholder="phone">
-                            <input type="email" placeholder="email" class="email">
+                            <input type="text" placeholder="First">
+                            <input type="text" placeholder="Last">
+                            <input type="text" placeholder="Company">
+                            <input type="tel" placeholder="Phone">
+                            <input type="email" placeholder="Email" class="email">
                         </div>
                         
                         <p class="title__file">File Details</p>
                         <div class="file">
-                            <input type="text" placeholder="your">
+                            <input type="text" placeholder="Your">
                             <input type="text" placeholder="Requested">
                             <input type="text" placeholder="County">
                             <input type="text" placeholder="Block">
@@ -62,8 +62,8 @@
                         <div class="wrapper-premises">
                             <div class="add">+</div>
                             <div class="premises">
-                                <input class="address" type="text" placeholder="Building address">
-                                <input class="unit" type="text" placeholder="Unit">
+                                <input class="Address" type="text" placeholder="Building address">
+                                <input class="Unit" type="text" placeholder="Unit">
                             </div>
                         </div>
                         <p class="title__details">Record Details</p>
@@ -107,8 +107,8 @@
                     
                 </div>
                 <div class="text">
-                    <span>PRIVACY POLICY</span>
-                    <span>TERMS AND CONDITIONS</span>
+                    <span>Privacy policy</span>
+                    <span>Terms and conditions</span>
                 </div>
                 <div class="right-block">
                     <p class="powered">powered by web & AD</p>
