--- a/itRacedData/services.html
+++ b/itRacedData/services.html
@@ -99,10 +99,10 @@
                 <img class="logo" src="assets/icon/logo-footer.svg" alt="logo">
                 <nav class="footer__navigation">
                     <ul class="navigation__list">
-                        <li class="list__item"><a href="#" class="list__link">Home</a></li>
-                        <li class="list__item"><a href="#" class="list__link active">Services</a></li>
-                        <li class="list__item"><a href="#" class="list__link">FAQ’s</a></li>
-                        <li class="list__item"><a href="#" class="list__link">Contact</a></li>
+                        <li class="list__item"><a href="index.html" class="list__link">Home</a></li>
+                        <li class="list__item"><a href="services.html" class="list__link active">Services</a></li>
+                        <li class="list__item"><a href="FAQ.html" class="list__link">FAQ’s</a></li>
+                        <li class="list__item"><a href="contact.html" class="list__link">Contact</a></li>
                     </ul>
                 </nav>
                 <a href="order.html" class="button">Place An Order</a>
@@ -121,8 +121,8 @@
                     
                 </div>
                 <div class="text">
-                    <span>PRIVACY POLICY</span>
-                    <span>TERMS AND CONDITIONS</span>
+                    <span>Privacy policy</span>
+                    <span>Terms and conditions</span>
                 </div>
                 <div class="right-block">
                     <p class="powered">powered by web & AD</p>
