refactor: formatting page2

--- a/uppointment/page2.html
+++ b/uppointment/page2.html
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 <div class="block-professional-invoice__img">
-                    <div class="first-invoise">
+                    <div class="first-invoice">
                         <img src="assets/img/invoice-1.svg" alt="invoice">
                     </div>
                     <div class="second-invoice">
@@ -180,7 +180,7 @@
                 </div>
             </div>
         </section>
-        <section class="about-application">
+       <section class="about-application">
             <div class="wrapper">
                 <div class="about-application__content">
                     <div class="about-application__bg">
@@ -210,7 +210,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> 
         <section class="save">
             <div class="wrapper">
                 <div class="save__content">
