--- a/uppointment/page3.html
+++ b/uppointment/page3.html
@@ -68,6 +68,11 @@
                             Get started for <strong>free</strong> and see why successful businesses are switching to Uppointment booking.
                         </p>
                     </div>
+                    <div class="second-block__bg">
+                        <img src="assets/img/second-block.svg" alt="background">
+                        <img class="first-image" src="assets/img/first-imge-second-block.svg" alt="image">
+                        <img class="second-image" src="assets/img/second-img-second-block.svg" alt="image">
+                    </div>
                 </div>
             </div>
         </section>
@@ -117,6 +122,143 @@
             </div>
         </section>
         <!-- end section for-whom -->
+
+        <!-- start section planning -->
+        <section class="planning">
+            <div class="wrapper">
+                <div class="planning__content">
+                    <div class="planning__description">
+                        <h3 class="planning__title">Instantly show customers your services availability</h3>
+                        <p class="planning__paragraph">
+                            Show your customers only available time frames for services or meetings you offer. Our powerful appointment scheduling software gives a clear visual snapshot of your availability and easy interface to book a service or delivery.
+                        </p>
+                        <h3 class="planning__title">Stay in control of your schedule
+                        </h3>
+                        <p class="planning__paragraph">
+                            Manage multiple locations, products and service providers. 
+Have a  full control of your calendar with customizable terms (no-show, cancelation policy etc), deposits, payment options and more
+
+                        </p>
+                    </div>
+                    <div class="planning__bg">
+                        <img src="assets/img/plannind-svg.svg" alt="background">
+                        <img class="calendar" src="assets/img/calendar.svg" alt="calendar">
+                        <img class="recording" src="assets/img/recording.svg" alt="recording">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end section planning -->
+        <!-- start scheduling-appointments -->
+        <section class="scheduling-appointments">
+            <div class="wrapper">
+                <div class="scheduling-appointments__content">
+                    <div class="scheduling-appointments__bg">
+                        <img src="assets/img/scheduling-appointments.svg" alt="background">
+                        <img src="assets/img/darts.svg" alt="darts" class="darts">
+                    </div>
+                    <div class="scheduling-appointments__description">
+                        <h3 class="scheduling-appointments__title">Professional approach from step 1</h3>
+                        <p class="scheduling-appointments__paragraph">
+                            Scheduling appointments is the very first step for your loyal and potential customer, that’s why it is very important to be done right.  Lot of changes and constant updates can look unprofessional. Uppointment’s  scheduling interface clearly shows that you care.
+                        </p>
+                        <h3 class="scheduling-appointments__title">Professional tone before and after meeting 
+                        </h3>
+                        <p class="scheduling-appointments__paragraph">
+                            Easily prepare and automatically send online intake forms and waivers to get appointments rolling without delays. Get paid when a customer books a spot.
+Send follow up recommendations, survey forms and invoices for remaining balance (co-pays, additional charges etc) - automatically too.
+
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end scheduling-appointments -->
+
+        <!-- start sixth-block section -->
+
+        <section class="sixth-block">
+            <div class="wrapper">
+                <div class="sixth-block__content">
+                    <div class="sixth-block__description">
+                        <h3 class="sixth-block__title">Fill your schedule 24/7</h3>
+                        <p class="sixth-block__paragraph">
+                            Lighten the load and make it easier for your team to manage schedule-reschedule routine. 
+                            Have your Uppointment link embedded on your website or add your booking link to your social accounts and turn followers into loyal customers.
+
+
+                        </p>
+                        <h3 class="sixth-block__title">Drastically reduce no-show and late appointments
+                        </h3>
+                        <p class="sixth-block__paragraph">
+                            Set text and email reminders to cut down on no-snow and reschedules.
+
+                        </p>
+                    </div>
+                    <div class="sixth-block__bg">
+                        <img src="assets/img/sixth-block-bg.svg" alt="background">
+                        <img src="assets/img/clock.svg" alt="clock" class="clock">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end sixth-block section -->
+
+        <!-- start how-it-works section -->
+        <section class="how-it-works">
+            <div class="wrapper">
+                <h2 class="how-it-works__title">How it works</h2>
+                <p class="how-it-works__subtitle">Organize your business calendar in no time.</p>
+                <div class="how-it-works__content">
+                    <div class="how-it-works__block">
+                        <h4 class="block__title">Easy setup.</h4>
+                        <p class="block__paragraph">Quickly set your services availability and prices. 
+                        </p>
+                    </div>
+                    <div class="how-it-works__block">
+                        <h4 class="block__title">Share your link</h4>
+                        <p class="block__paragraph">Embed Uppointment widget on your website and share your link via social media sites. Send it by text, email or whatsapp.
+                        </p>
+                    </div>
+                    <div class="how-it-works__block">
+                        <h4 class="block__title">Done. New booking rolls in</h4>
+                        <p class="block__paragraph">Customers select services, pick available time and add it to your calendar.
+                            Our checkout for paid services is as easy and user friendly as booking.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end how-it-works section -->
+
+        <!-- start paid section -->
+        <section class="paid">
+            <div class="wrapper">
+                <h2 class="paid__title">Get paid. Seamlessly</h2>
+                <p class="paid__paragraph">For paid appointments and classes our scheduling software comes with an easy, multi payment options checkout. Accept credit cards using built in Uppointment Pay with industry-low rates, starting at 2.99% or in a matter of a few clicks add your own merchant account.
+                </p>
+                <div class="paid__payment-methods">
+                    <img src="assets/img/paypal1.svg" alt="paypal">
+                    <img src="assets/img/spire.svg" alt="stripe">
+                    <img src="assets/img/square1.svg" alt="square">
+                    <img src="assets/img/pay1.svg" alt="pay">
+                    <img src="assets/img/authorize.net1.svg" alt="authorize">
+                    <img src="assets/img/amazone1.svg" alt="amazon">
+                </div>
+            </div>
+        </section>
+        <!-- end paid section -->
+        <!-- start register section -->
+        <section class="register">
+            <div class="wrapper">
+                <p class="register__paragraph">
+                    Uppointment’s booking is quick and easy to use for your customers and your team. 
+Our scheduling software is an intuitive and ready-to-use solution for businesses.
+No coding required, but if you are too busy, help is just a click away.
+                </p>
+                <button class="register__button">Register now</button>
+            </div>
+        </section>
+        <!-- end register section -->
     </main>
 
     <footer class="footer">
