--- a/uppointment/smart-invoicing.html
+++ b/uppointment/smart-invoicing.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uppointment</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="assets/style/normalize.css">
     <link rel="stylesheet" href="assets/style/page3.css">
@@ -24,9 +25,9 @@
                         <li class="list__item"><a href="#" class="list__link">pricing</a></li>
                         <li class="list__item"><a href="#" class="list__link">products <img src="assets/img/arrow-down.svg"></a>
                             <div class="submenu">
-                                <a href="#">User-friendly booking software</a>
-                                <a href="#">Smart invoicing</a>
-                                <a href="#">Live web chat</a>
+                                <a href="sofware.html">User-friendly booking software</a>
+                                <a href="smart-invoicing.html">Smart invoicing</a>
+                                <a href="index.html">Live web chat</a>
                                 <a href="#">Business ready websites</a>
                                 <a href="#">Email Signature Management</a>
                             </div>
@@ -50,7 +51,8 @@
                         Schedule appointments and meetings without the back-and-forth emails, text or calls.
                     </h2>
                     <div class="schedule__bg">
-                        <img src="assets/img/schedule-bg.svg" alt="">
+                        <img src="assets/img/schedule-bg.svg" alt="schedule">
+                        <img src="assets/img/schedule-bg-people.svg" class="schedule-people wow animate__animated animate__fadeInRight" alt="schedule-people">
                     </div>
                 </div>
             </div>
@@ -70,8 +72,8 @@
                     </div>
                     <div class="second-block__bg">
                         <img src="assets/img/second-block.svg" alt="background">
-                        <img class="first-image" src="assets/img/first-imge-second-block.svg" alt="image">
-                        <img class="second-image" src="assets/img/second-img-second-block.svg" alt="image">
+                        <img class="first-image wow animate__animated animate__fadeInRight" data-wow-delay="0.2s" src="assets/img/first-imge-second-block.svg" alt="image">
+                        <img class="second-image wow animate__animated animate__fadeInRight" data-wow-delay="0.4s" src="assets/img/second-img-second-block.svg" alt="image">
                     </div>
                 </div>
             </div>
@@ -141,9 +143,9 @@ Have a  full control of your calendar with customizable terms (no-show, cancelat
                         </p>
                     </div>
                     <div class="planning__bg">
-                        <img src="assets/img/plannind-svg.svg" alt="background">
-                        <img class="calendar" src="assets/img/calendar.svg" alt="calendar">
-                        <img class="recording" src="assets/img/recording.svg" alt="recording">
+                        <img src="assets/img/planning-bg.svg" alt="background">
+                        <!-- <img class="calendar" src="assets/img/calendar.svg" alt="calendar"> -->
+                        <img class="recording wow animate__animated animate__fadeInDown" src="assets/img/recording.svg" alt="recording">
                     </div>
                 </div>
             </div>
@@ -155,7 +157,7 @@ Have a  full control of your calendar with customizable terms (no-show, cancelat
                 <div class="scheduling-appointments__content">
                     <div class="scheduling-appointments__bg">
                         <img src="assets/img/scheduling-appointments.svg" alt="background">
-                        <img src="assets/img/darts.svg" alt="darts" class="darts">
+                        <img src="assets/img/darts.svg" alt="darts" class="darts wow animate__animated animate__flipInX" data-wow-delay="0.2s">
                     </div>
                     <div class="scheduling-appointments__description">
                         <h3 class="scheduling-appointments__title">Professional approach from step 1</h3>
@@ -197,7 +199,7 @@ Send follow up recommendations, survey forms and invoices for remaining balance 
                     </div>
                     <div class="sixth-block__bg">
                         <img src="assets/img/sixth-block-bg.svg" alt="background">
-                        <img src="assets/img/clock.svg" alt="clock" class="clock">
+                        <img src="assets/img/clock.svg" alt="clock" class="clock wow animate__animated animate__shakeX">
                     </div>
                 </div>
             </div>
@@ -210,17 +212,17 @@ Send follow up recommendations, survey forms and invoices for remaining balance 
                 <h2 class="how-it-works__title">How it works</h2>
                 <p class="how-it-works__subtitle">Organize your business calendar in no time.</p>
                 <div class="how-it-works__content">
-                    <div class="how-it-works__block">
+                    <div class="how-it-works__block wow animate__animated animate__fadeIn">
                         <h4 class="block__title">Easy setup.</h4>
                         <p class="block__paragraph">Quickly set your services availability and prices. 
                         </p>
                     </div>
-                    <div class="how-it-works__block">
+                    <div class="how-it-works__block wow animate__animated animate__fadeIn">
                         <h4 class="block__title">Share your link</h4>
                         <p class="block__paragraph">Embed Uppointment widget on your website and share your link via social media sites. Send it by text, email or whatsapp.
                         </p>
                     </div>
-                    <div class="how-it-works__block">
+                    <div class="how-it-works__block wow animate__animated animate__fadeIn">
                         <h4 class="block__title">Done. New booking rolls in</h4>
                         <p class="block__paragraph">Customers select services, pick available time and add it to your calendar.
                             Our checkout for paid services is as easy and user friendly as booking.</p>
@@ -237,12 +239,32 @@ Send follow up recommendations, survey forms and invoices for remaining balance 
                 <p class="paid__paragraph">For paid appointments and classes our scheduling software comes with an easy, multi payment options checkout. Accept credit cards using built in Uppointment Pay with industry-low rates, starting at 2.99% or in a matter of a few clicks add your own merchant account.
                 </p>
                 <div class="paid__payment-methods">
-                    <img src="assets/img/paypal1.svg" alt="paypal">
-                    <img src="assets/img/spire.svg" alt="stripe">
-                    <img src="assets/img/square1.svg" alt="square">
-                    <img src="assets/img/pay1.svg" alt="pay">
-                    <img src="assets/img/authorize.net1.svg" alt="authorize">
-                    <img src="assets/img/amazone1.svg" alt="amazon">
+                    <div class="arrow-left">
+                        <img src="assets/img/left.svg" alt="left">
+                    </div>
+                    <div class="methods">
+                        <div class="method active">
+                            <img src="assets/img/square1.svg" alt="square">
+                        </div>
+                        <div class="method ">
+                            <img src="assets/img/amazone1.svg" alt="amazon">
+                        </div>
+                        <div class="method">
+                            <img src="assets/img/authorize.net1.svg" alt="authorize">
+                        </div>
+                        <div class="method">
+                            <img src="assets/img/paypal1.svg" alt="PayPal">
+                        </div>
+                        <div class="method" >
+                            <img src="assets/img/pay1.svg" alt="pay">
+                        </div>
+                        <div class="method" >
+                            <img src="assets/img/spire1.svg" alt="stripe">
+                        </div>
+                    </div>
+                    <div class="arrow-right">
+                        <img src="assets/img/right.svg" alt="right">
+                    </div>
                 </div>
             </div>
         </section>
@@ -283,5 +305,7 @@ No coding required, but if you are too busy, help is just a click away.
             
         </div>
     </footer>
+    <script src="assets/scripts/wow.min.js"></script>
+    <script src="assets/scripts/smart-invoicing.js"></script>
 </body>
 </html>
