--- a/uppointment/index.html
+++ b/uppointment/index.html
@@ -25,8 +25,8 @@
                         <li class="list__item"><a href="#" class="list__link">pricing</a></li>
                         <li class="list__item"><a href="#" class="list__link">products <img src="assets/img/arrow-down.svg"></a>
                             <div class="submenu">
-                                <a href="page2.html">User-friendly booking software</a>
-                                <a href="#">Smart invoicing</a>
+                                <a href="sofware.html">User-friendly booking software</a>
+                                <a href="smart-invoicing.html">Smart invoicing</a>
                                 <a href="index.html">Live web chat</a>
                                 <a href="#">Business ready websites</a>
                                 <a href="#">Email Signature Management</a>
