--- a/uppointment/managment.html
+++ b/uppointment/managment.html
@@ -126,7 +126,7 @@
                         </ul>
                     </div>
                     <div class="protect-inforce__img">
-                        <img class="plane" src="assets/img/plane.svg" alt="plane">
+                        <img class="plane wow" src="assets/img/plane.svg" alt="plane">
                         <img src="assets/img/protect-inforce-img.svg" alt="protect-inforce">
                     </div>
                 </div>
@@ -275,7 +275,7 @@
                         </p>
                     </div>
                     <div class="secure__img">
-                        <img class="form" src="assets/img/form.svg" alt="form">
+                        <img class="form wow" src="assets/img/form.svg" alt="form">
                         <img src="assets/img/secure__bg.svg" alt="secure">
                     </div>
                 </div>
@@ -286,7 +286,7 @@
             <div class="wrapper">
                 <div class="software__content">
                     <div class="software__img">
-                        <img class="plane" src="assets/img/plane1.svg" alt="plane">
+                        <img class="plane wow" src="assets/img/plane1.svg" alt="plane">
                         <img src="assets/img/software__bg.svg" alt="software"/>
                     </div>
                     <div class="software__description">
@@ -342,7 +342,7 @@
             </div>
         </div>
     </footer>
-
+    <script src="assets/scripts/wow.min.js"></script>
     <script src="assets/scripts/swiper.js"></script>
 </body>
 </html>
